# fdf

./: .gitmodules  CMakeLists.txt
include/: canvas.h  events.h  matrices.h  matrix_ops.h  params.h  point.h  usefull_defs.h
maps/: plat.fdf
src/: apply_keystate.c  canvas.c  draw_line.c  events.c  ft_delsplit.c  main.c  map_drawer.c  map_reader.c  map_reader2.c  matrix_ops.c  point_create.c  point_rotations.c  prepare_params.c  project_point.c  raise_error.c  set_timeout.c  translate_point.c
